[UPD] Agregada la sección certificaciones y mejoras a los modos dark/ligh

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
 /* Variables para tema claro */
 [data-theme="light"] {
-	--bg-color: #f5f5f5;
+	--bg-color: #F8FAFC;
 	--text-color: #020312;
 	--second-color: #555555;
 	--other-color: #ffffff;
@@ -272,7 +272,7 @@ header.sticky{
 }
 .box{
 	padding: 45px;
-	background: #12141c;
+	background: var(--box-bg);
 	border-top: 5px solid transparent;
 	border-radius: 0.5rem;
 	transition: all .40s ease;
@@ -312,7 +312,7 @@ header.sticky{
 }
 .row{
 	padding: 25px;
-	background: #12141c;
+	background: var(--box-bg);
 	border-radius: 0.5rem;
 	transition: all .40s ease;
 }
@@ -382,13 +382,13 @@ header.sticky{
 .contact-icons i{
 	height: 40px;
 	width: 40px;
-	background: #12141c;
-	border-radius: 0.5rem;
+	background: var(--box-bg);
+	border-radius: var(--border-radius);
 	color: var(--main-color);
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 18px;
+	font-size: 24px;
 	margin-right: 10px;
 	transition: all .40s ease;
 }
@@ -407,12 +407,12 @@ form textarea{
 	outline: none;
 	width: 100%;
 	padding: 18px;
-	background: #12141c;
+	background: var(--box-bg);
 	color: var(--text-color);
 	font-size: 1rem;
 	font-weight: 600;
 	margin-bottom: 0.5rem;
-	border-radius: 0.5rem;
+	border-radius: var(--border-radius);
 }
 .contact-form textarea{
 	resize: none;
@@ -623,7 +623,7 @@ textarea:focus {
     background: transparent;
     border: none;
     color: var(--text-color);
-    font-size: 1.5rem;
+    font-size: 24px;
     cursor: pointer;
     padding: 0.5rem;
     border-radius: var(--border-radius);
