--- a/css/style.css
+++ b/css/style.css
@@ -635,6 +635,32 @@ textarea:focus {
     transform: translateY(-2px);
 }
 
+.theme-toggle i{
+	cursor: pointer;
+	display: block;
+}
+
+.flags{
+	width: 75px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 1rem;
+}
+
+.flags-item{
+	width: 30px;
+}
+
+.flags-item img{
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+	transition: var(--transition);
+	display: block;
+	border-radius: var(--border-radius);
+}
+
 /* Ajustes responsive */
 @media (max-width: 830px) {
     .header-buttons {
